# KCF_detail

./: README.md
c++_implementation/: run_dataset.bat
c++_implementation/cmake_generate/: CMakeLists.txt  run_cmake.bat
c++_implementation/src/: ffttools.hpp  fhog.cpp  fhog.hpp  kcftracker.cpp  kcftracker.hpp  labdata.hpp  main.cpp  recttools.hpp  tracker.h
c_implementation/: .gitignore  jpg_to_raw.m
c_implementation/cmake_generate/: CMakeLists.txt  run_cmake.bat
c_implementation/data/ball/: 00000001.txt  00000002.txt  00000003.txt  00000004.txt  00000005.txt  00000006.txt  00000007.txt  00000008.txt  00000009.txt  00000010.txt  00000011.txt  00000012.txt  00000013.txt  00000014.txt  00000015.txt  00000016.txt  00000017.txt  00000018.txt  00000019.txt  00000020.txt  00000021.txt  00000022.txt  00000023.txt  00000024.txt  00000025.txt  00000026.txt  00000027.txt  00000028.txt  00000029.txt  00000030.txt  00000031.txt  00000032.txt  00000033.txt  00000034.txt  00000035.txt  00000036.txt  00000037.txt  00000038.txt  00000039.txt  00000040.txt  (+60 more)
c_implementation/src/: RunTracker.c  Tracker.c  Tracker.h  fft.c  fft.h  para.h
markdown/: file_dir.dot
matlab_implementation/: get_features.m  load_video_info.m  run_tracker.m  tracker.m
